Fixed mobile color and added spacing for

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ nav ul li a {
     display: none;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(132, 140, 249);
+    background-color: rgb(0, 247, 255);
     color: white;
     position: absolute;
     text-decoration: none;
@@ -175,8 +175,6 @@ nav ul li a {
     max-width: 20%;
     height: auto;
 }
-
-
   
 @media (min-width: 820px) {
     .bottom-half {
@@ -208,6 +206,7 @@ nav ul li a {
     font-size: 30px;
     color: white;
     font-weight: bold;
+    padding: 5px;
 }
 
 .about-left {
